working incident, need to enrich with popup input

--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
         "*://*.service-now.com/*"
       ],
       "js": ["src/content.js"],
-      "run_at": "document_idle"
+      "run_at": "document_idle",
+      "all_frames": true
     }
   ],
   "action": {
