--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
+    "openai": "^5.12.2",
     "vite-plugin-crx": "^0.0.0-beta.0"
   }
 }
